[gd_scene load_steps=7 format=3 uid="uid://c6j8433ge4v87"]

[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_045hk"]
[ext_resource type="Script" path="res://Scenes/Common/Buttons/Scripts/up_down_buttons.gd" id="1_o2tqo"]
[ext_resource type="PackedScene" uid="uid://btj8iwsaoid87" path="res://Scenes/Common/Buttons/settings_managed_texture_button.tscn" id="2_52mnr"]
[ext_resource type="Texture2D" uid="uid://bb1rdbn37n0gc" path="res://Icons/down-arrow.svg" id="3_48qfq"]
[ext_resource type="Texture2D" uid="uid://caj222uwxllqe" path="res://Icons/up-arrow.svg" id="5_4rc5u"]
[ext_resource type="PackedScene" uid="uid://d34hkypk02kw1" path="res://Scenes/Common/Buttons/settings_managed_text_button.tscn" id="5_n3c68"]

[node name="UpDownButtons" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = ExtResource("1_045hk")
script = ExtResource("1_o2tqo")

[node name="DownButton" parent="." instance=ExtResource("2_52mnr")]
layout_mode = 2
texture_2d = ExtResource("3_48qfq")

[node name="ValueTextButton" parent="." instance=ExtResource("5_n3c68")]
layout_mode = 2
size_flags_horizontal = 3
text = "MOD HERE"
flat = true

[node name="UpButton" parent="." instance=ExtResource("2_52mnr")]
layout_mode = 2
texture_2d = ExtResource("5_4rc5u")

[connection signal="long_pressed" from="DownButton" to="." method="_on_down_button_long_pressed"]
[connection signal="short_pressed" from="DownButton" to="." method="_on_down_button_short_pressed"]
[connection signal="pressed" from="ValueTextButton" to="." method="_on_value_text_button_pressed"]
[connection signal="long_pressed" from="UpButton" to="." method="_on_up_button_long_pressed"]
[connection signal="short_pressed" from="UpButton" to="." method="_on_up_button_short_pressed"]
